--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 pom.xml
 target/classes/META-INF/MANIFEST.MF
 target/classes/META-INF/maven/Server-ClientAPI/Server-ClientAPI/pom.properties
+/target
